--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -7,21 +7,41 @@
   "license": "ISC",
   "main": "lib/header.js",
   "directories": {
-    "lib": "lib",
+    "src": "src",
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "src"
   ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yoannk-dev/mfe-training.git"
   },
   "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
     "test": "node ./__tests__/header.test.js"
   },
   "bugs": {
     "url": "https://github.com/yoannk-dev/mfe-training/issues"
   },
-  "homepage": "https://github.com/yoannk-dev/mfe-training#readme"
+  "homepage": "https://github.com/yoannk-dev/mfe-training#readme",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "@vitejs/plugin-react": "^4.0.4",
+    "eslint": "^8.49.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9"
+  }
 }
