--- a/packages/shell/package.json
+++ b/packages/shell/package.json
@@ -7,17 +7,21 @@
   "license": "ISC",
   "main": "lib/shell.js",
   "directories": {
-    "lib": "lib",
+    "lib": "src",
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "src"
   ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yoannk-dev/mfe-training.git"
   },
   "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
     "test": "node ./__tests__/shell.test.js"
   },
   "bugs": {
